--- a/project.html
+++ b/project.html
@@ -66,18 +66,36 @@
             style="display: flex; flex-direction: column; align-items: center"
             onsubmit="addBlog(event)"
           >
-            <h1 class="text-center mt-3"><strong>Create Post Blog</strong></h1>
+            <h1 class="text-center mt-3"><strong>ADD MY PROJECT</strong></h1>
 
             <div class="w-50">
               <div class="mb-3">
                 <label for="input-blog-title" class="form-label mt-4"
-                  >Title</label
+                  >Project Name</label
                 >
                 <input type="text" class="form-control" id="input-blog-title" />
               </div>
+              <div class="mb-3 d-flex justify-content-between">
+                <div class="w-100">
+                  <label for="input-blog-start" class="form-label"
+                    >Start Date</label
+                  >
+                  <input
+                    type="date"
+                    class="form-control"
+                    id="input-blog-start"
+                  />
+                </div>
+                <div class="w-100 ms-3">
+                  <label for="input-blog-end" class="form-label"
+                    >End Date</label
+                  >
+                  <input type="date" class="form-control" id="input-blog-end" />
+                </div>
+              </div>
               <div class="mb-3">
                 <label for="input-blog-content" class="form-label"
-                  >Content</label
+                  >Description</label
                 >
                 <textarea
                   class="form-control"
@@ -86,14 +104,54 @@
                 ></textarea>
               </div>
               <div class="mb-3">
+                <label class="form-label">Technologies</label>
+                <div class="d-flex mt-2">
+                  <div class="me-5">
+                    <input
+                      type="checkbox"
+                      id="nodeCheck"
+                      name="nodeCheck"
+                      value="NodeJS"
+                      class="me-3 shadow-sm"
+                    />
+                    <label for="nodeCheck"> Node JS</label><br />
+                    <input
+                      type="checkbox"
+                      id="reactCheck"
+                      name="reactCheck"
+                      value="ReactJS"
+                      class="me-3 mt-3 shadow-sm"
+                    />
+                    <label for="reactCheck"> React JS</label><br />
+                  </div>
+                  <div class="ms-5">
+                    <input
+                      type="checkbox"
+                      id="nextCheck"
+                      name="nextCheck"
+                      value="NextJS"
+                      class="me-3 shadow-sm"
+                    />
+                    <label for="nextCheck">Next JS</label><br />
+                    <input
+                      type="checkbox"
+                      id="typesCheck"
+                      name="typesCheck"
+                      value="Typescript"
+                      class="me-3 mt-3 shadow-sm"
+                    />
+                    <label for="typesCheck">TypeScript</label><br />
+                  </div>
+                </div>
+              </div>
+              <div class="mb-3 mt-4">
                 <label for="input-blog-image" class="form-label"
                   >Upload Image</label
                 >
                 <input type="file" class="form-control" id="input-blog-image" />
               </div>
               <div class="d-flex justify-content-end">
-                <button type="submit" class="btn btn-danger">Post Blog</button>
-              </div>
+                <button type="submit" class="btn btn-primary">Submit
             </div>
           </form>
         </div>
